# TestOwnSimpleDatabase

./: App.cpp  App.h  AppExceptions.cpp  AppExceptions.h  BoostTest.cpp  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Log_t.cpp  Log_t.h  OwnDB.cpp  OwnDB.h  ParamsReader.cpp  ParamsReader.h  operator_func_cast.hpp
